[package]
name = "xfer"
version = "0.0.0"
authors = ["serprex"]

[[bin]]
name = "xfer"
path = "xfer.rs"

[[bin]]
name = "vmrepl"
path = "vmrepl.rs"

[[bin]]
name = "initfs"
path = "initfs.rs"

[[lib]]
name = "vm"
path = "vm.rs"

[[lib]]
name = "vmsys"
path = "vmsys.rs"

#[dependencies]
#rustyline = "0.1.0"
